[workspace]
members = ["packages/*", "proto-build"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
juno-std-derive = { path = "packages/juno-std-derive" }


[workspace.dependencies]
cosmwasm-std = "2.2.2"
cosmwasm-schema = { version = "2.2.2", default-features = false }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
schemars = "0.8.22"
serde = { version = "1.0.219", default-features = false }
serde-json-wasm = "1.0.0"
base64 = "0.22.1"
prost = "0.13.5"
prost-types = "0.13.5"
cosmos-sdk-proto = { version = "0.26.1", default-features = false }
bech32 = "0.11.0"
thiserror = "2.0.12"
protobuf = "3.7.2"
hex = "0.4.3"
serde_json = { version = "1.0.140" }
tendermint-proto = "0.40.1"
speedate = "0.15.0"
